daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N8_unsorted_policy_array/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae30158401ee870b8a326e96fd1451aa8586e3042564d45244e1a721d12fa42a0073f20bda61254e1f33c4260aa2a9c7f4e8f1935ac13c87d42b716cbb3cc1313d24fcfa601f602f6
